--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,87 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+
 body {
-    margin: 0;
     background-color: black;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-#clock {
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+  /* Style the link inside the navigation bar */
+  .nav-left a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;    
+    text-decoration: none;
+    font-size: 17px;
+    padding: 14px 16px;
+  }
+  /* Change the color of links on hover */
+  .nav-left a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Right-aligned section inside the top navigation */
+  .nav-right {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;    
+    text-decoration: none;
+    font-size: 17px;
+    padding: 14px 16px;
+  }
+
+  .container {
+    width: 800px;
+    max-width: 80%;
     background-color: white;
-    color: tomato;
-    display: inline-flex;
-    margin: 0;
-    height: 50px;
-    width: 100px;
-}
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+  .btn {
+    border-radius: 5px;
+    color: white;
+    outline: none;
+    padding: 5px;
+  }
+  
+.btn:hover {
+    border-color: black;
+  }
+
+  
+.start {
+    background-color: purple;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 10px 20px;
+  }
+  
+  .controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .hide {
+    display: none;
+  }
