--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,87 +1,171 @@
 *, *::before, *::after {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
 body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    
+background-color: #d1cdcd;
+margin: 0;
+padding: 0;
+display: flex;
+width: 100vw;
+height: 100vh;
+justify-content: center;
+align-items: center;   
+}
+
+/* Topbar wrapper*/
+.topbar {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-color: rgba(85, 44, 88, 0.808);
+}
+
+/* Style the link inside the top bar */
+.left a {
+margin: 0;
+float: left;  
+color: #f2f2f2;
+text-align: center;
+padding: 1.1rem 1.5rem;
+text-decoration: none;
+font-size: 1.2rem;
+}
+
+/* Change the color of links on hover */
+.left a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Right-aligned section inside the top bar */
+.right input {
+  float: right;
+  border-width: 0;
+  
+  color: #f2f2f2;
+  text-align: center;
+  padding: 1.1rem 1.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+input[type="text"]
+{
+  background: transparent;
+  border: none;
+}
+
+h1 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+p {
+font-size: 1.2rem;
+}
+
+#start-txt, h3 {
+text-align: justify;
+font-size: 1.5rem;
+}
+
+.container {
+width: 800px;
+max-width: 80%;
+background-color: white;
+border-radius: 0.5rem;
+box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
+padding: 1.2rem 3rem 1.2rem 3rem;
+}
+
+.controls {
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 
-.navbar {
-    background-color: #333;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-  /* Style the link inside the navigation bar */
-  .nav-left a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;    
-    text-decoration: none;
-    font-size: 17px;
-    padding: 14px 16px;
-  }
-  /* Change the color of links on hover */
-  .nav-left a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Right-aligned section inside the top navigation */
-  .nav-right {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;    
-    text-decoration: none;
-    font-size: 17px;
-    padding: 14px 16px;
-  }
+/* BUTTONS */
+.btn {
+font-size: 1.5rem;
+font-weight: bold;
+padding: 1rem 0;
+width: 15rem;
+text-align: center;
+border: 0.1rem solid rgba(171, 89, 177, 0.808);
+margin-bottom: 1rem;
+color: white;
+background-color: rgb(152, 104, 156);
+text-decoration: none;
+}
 
-  .container {
-    width: 800px;
-    max-width: 80%;
-    background-color: white;
-    border-radius: 5px;
-    padding: 10px;
-  }
-
-  .btn {
-    border-radius: 5px;
-    color: white;
-    outline: none;
-    padding: 5px;
-  }
-  
 .btn:hover {
-    border-color: black;
-  }
+cursor: pointer;
+box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
+transform: translateY(-0.1rem);
+/*transition: transform 150ms; */
+}
 
-  
-.start {
-    background-color: purple;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding: 10px 20px;
-  }
-  
-  .controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .hide {
-    display: none;
-  }
+.btn[disabled]:hover {
+cursor: not-allowed;
+box-shadow: none;
+/* transform: none; */
+}
+
+
+.flex {    
+height: auto;
+display: flex;
+justify-content: center;
+align-items: center;
+max-width: 80rem;
+margin: 0 auto;
+top: 5rem;
+}
+
+
+/* Questions and Answers */
+.choice-container {
+display: flex;   
+margin-bottom: 0.5rem;
+width: 100%;
+font-size: 1.8rem;
+border: 0.1rem solid rgba(171, 89, 177, 0.808);
+background-color: white;
+min-height: 5rem;
+}
+
+.choice-container:hover {
+cursor: pointer;
+box-shadow: 0 0.4rem 1.4rem 0 rgba(141, 76, 146, 0.808);
+transform: translateY(-0.1rem);
+}
+
+.choice-number {
+margin:0;
+padding: 1.2rem;
+background-color: rgba(85, 44, 88, 0.808);
+color: white;
+}
+
+.choice-txt {
+margin: 0;
+padding: 1.1rem;
+width: 100%;
+}
+
+.center {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.correct {
+background-color: rgb(68, 245, 177);
+}
+
+.wrong {
+background-color: red;
+}
