--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ align-items: center;
 }
 
 
-/* BUTTONS */
+/* Buttons */
 .btn {
 font-size: 1.5rem;
 font-weight: bold;
@@ -155,7 +155,7 @@ background-color: rgb(68, 245, 177);
 background-color: red;
 }
 
-/* End Page */
+/**** End Page ****/
 .input-group {    
 align-items: left;
 max-width: 80rem;
@@ -182,6 +182,7 @@ gap: 1rem;
 #msg {
  min-height: 1.2rem;
 }
+
 .error {
   color: red;
   font-weight: bold;
@@ -194,3 +195,9 @@ gap: 1rem;
   font-style: italic;
 }
 
+/**** HighScore Page ****/
+li {
+  list-style-type: none;
+  margin-bottom: 1.5rem;
+  font-size: 1.5rem;
+}
