--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,9 @@ gap: 1rem;
 
 /**** HighScore Page ****/
 li {
+  white-space: pre;
   list-style-type: none;
+  justify-content: center;
   margin-bottom: 1.5rem;
   font-size: 1.5rem;
 }
