--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,53 +3,50 @@
 }
 
 body {
-background-color: #d1cdcd;
-margin: 0;
-padding: 0;
-display: flex;
-width: 100vw;
-height: 100vh;
-justify-content: center;
-align-items: center;   
+  background-color: #d1cdcd;
+  margin: 0;
+  padding: 0;
 }
 
 /* Topbar wrapper*/
 .topbar {
-  overflow: hidden;
-  position: absolute;
+  display: flex;
   top: 0;
   width: 100%;
   background-color: rgba(85, 44, 88, 0.808);
 }
 
+
 /* Style the link inside the top bar */
-.left a {
-margin: 0;
-float: left;  
-color: #f2f2f2;
-text-align: center;
-padding: 1.1rem 1.5rem;
-text-decoration: none;
-font-size: 1.2rem;
+.link {
+  width: 50%;
+  margin: 0;
+  float: left;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 1.1rem 1.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
 /* Change the color of links on hover */
-.left a:hover {
+.link:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Right-aligned section inside the top bar */
-.right input {
+.timer {
+  width: 50%;
   float: right;
   border-width: 0;    
   color: #f2f2f2;
-  text-align: center;
-  padding: 1.1rem 1.5rem;
+  text-align: right;
+  padding: 1.1rem 1.5rem 1.1rem 0;
   text-decoration: none;
   font-size: 1.2rem;
 }
-.right input[type="text"]
+.timer[type="text"]
 {
   background: transparent;
   border: none;
@@ -61,109 +58,119 @@ h1 {
 }
 
 p {
-font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 #start-txt, h3 {
-text-align: justify;
-font-size: 1.5rem;
+  text-align: justify;
+  font-size: 1.5rem;
+}
+
+/* Container wrapper */
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  width: 100vw;
+  height: 100vh;
 }
 
 .container {
-width: 800px;
-max-width: 80%;
-background-color: white;
-border-radius: 0.5rem;
-box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
-padding: 1.2rem 3rem 1.2rem 3rem;
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
+  padding: 1.2rem 3rem 1.2rem 3rem;
+  
 }
 
 .controls {
-display: flex;
-justify-content: center;
-align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 /* Buttons */
 .btn {
-font-size: 1.5rem;
-font-weight: bold;
-padding: 1rem 0;
-width: 15rem;
-text-align: center;
-border: 0.1rem solid rgba(171, 89, 177, 0.808);
-margin-bottom: 1rem;
-color: white;
-background-color: rgb(152, 104, 156);
-text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 1rem 0;
+  width: 15rem;
+  text-align: center;
+  border: 0.1rem solid rgba(171, 89, 177, 0.808);
+  margin-bottom: 1rem;
+  color: white;
+  background-color: rgb(152, 104, 156);
+  text-decoration: none;
 }
 
 .btn:hover {
-cursor: pointer;
-box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
-transform: translateY(-0.1rem);
+  cursor: pointer;
+  box-shadow: 0px 5px 10px 0px rgba(141, 76, 146, 0.808);
+  transform: translateY(-0.1rem);
 }
 
 .btn[disabled]:hover {
-cursor: not-allowed;
-box-shadow: none;
-transform: none;
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
 }
 
 
 /* Questions and Answers */
 .choice-container {
-display: flex;   
-margin-bottom: 0.5rem;
-width: 100%;
-border: 0.1rem solid rgba(171, 89, 177, 0.808);
-background-color: white;
+  display: flex;   
+  margin-bottom: 0.5rem;
+  width: 100%;
+  border: 0.1rem solid rgba(171, 89, 177, 0.808);
+  background-color: white;
 }
 
 .choice-container:hover {
-cursor: pointer;
-box-shadow: 0 0.4rem 1.4rem 0 rgba(141, 76, 146, 0.808);
-transform: translateY(-0.1rem);
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(141, 76, 146, 0.808);
+  transform: translateY(-0.1rem);
 }
 
 .choice-number {
-margin:0;
-padding: 1.2rem 1.4rem 1.2rem 1.4rem;
-background-color: rgba(85, 44, 88, 0.808);
-color: white;
+  margin:0;
+  padding: 1.2rem 1.4rem 1.2rem 1.4rem;
+  background-color: rgba(85, 44, 88, 0.808);
+  color: white;
 }
 
 .choice-txt {
-margin: 0;
-padding: 1.1rem;
-width: 100%;
+  margin: 0;
+  padding: 1.1rem;
+  width: 100%;
 }
 
 .center {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .correct {
-background-color: rgb(68, 245, 177);
+  background-color: rgb(68, 245, 177);
 }
 
 .wrong {
-background-color: red;
+  background-color: red;
 }
 
 /**** End Page ****/
 .input-group {    
-align-items: left;
-max-width: 80rem;
-margin: 2rem auto;
-top: 5rem;
+  align-items: left;
+  max-width: 80rem;
+  margin: 2rem auto;
+  top: 5rem;
 }
 
-input {
+#username {
   margin-left: 0.5rem;
   padding: 0.5rem;
   font-size: 0.9rem;  
@@ -171,16 +178,16 @@ input {
 }
 
 label {
-font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .controls {
-float: center; 
-gap: 1rem;
+  float: center; 
+  gap: 1rem;
 }
 
 #msg {
- min-height: 1.2rem;
+  min-height: 1.2rem;
 }
 
 .error {
@@ -208,4 +215,41 @@ th {
 td {
   white-space: pre;
   font-size: 1.5rem;
+}
+
+/* For smaller screens or smartphones */
+@media (max-width: 550px) {
+  .btn, .link, .timer {
+    font-size: 0.9rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  th {
+    font-size: 1.2rem;
+  }
+  td {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .btn, .link, .timer {
+    font-size: 0.7rem;
+  }
+  h1 {
+    font-size: 1.6rem;
+  }
+ #start-txt  {
+    font-size: 1.2rem;
+  }
+  #msg {
+    font-size: 0.8rem;
+  }
+  th {
+    font-size: 1rem;
+  }
+  td {
+    font-size: 0.9rem;
+  }
 }
